--- a/style.css
+++ b/style.css
@@ -2,8 +2,13 @@
 
 html, body {
 
-  margin: 3rem 10rem 10rem;
-  padding: 0;
+  
+  display: flex;
+  justify-content:center;
+  align-items: center; 
+  /*margin: 3rem 10rem 10rem;
+  margin:auto;*/
+  padding: 1rem 5rem 1rem; /* padding is superior to margin */
   font-family: "Fragment Mono", monospace;
   line-height: 1.3rem;
 
@@ -20,6 +25,23 @@ html, body {
   background-color: #238489;
 }
 
+#settingsHolder{
+  padding: .5rem 1rem .5rem;
+  border-color: #238489;
+  background-color: #546EB7;
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: space-evenly;
+  /*
+  justify-content: space-evenly;*/
+}
+
+#settingPart{
+  
+  padding: .5rem 1rem .5rem;
+  
+} 
 
 canvas {
   background-color:#AABBAA;
